# gui

./: .gitmodules  CMakeLists.txt  conanfile.txt  readme.md
gource_logs/: combined.txt  log_scripts.txt  log_shader_cache.txt  log_shaders.txt  log_sound_system.txt  log_text_renderer.txt  log_vertex_geometry.txt  log_window.txt
src/: main.cpp
src/colors/: colors.cpp  colors.hpp
src/graphics/: batcher.hpp  sbpt.ini
src/sound_types/: sound_types.hpp
